@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Ben Vandervalk
 copyright_year   = 2011
 
-version = 0.005
+version = 0.006
 
 [@Basic]
 [PkgVersion]
